# CatPi

./: .clang-format  .gitignore  CMakeLists.txt  README.md  generate.sh  pipins.sh  watcher.sh
.oldies/: WeightProgram.cpp  WeightProgram.hpp  snippets.cpp  snippets.cxx
data/: icons.qrc
experiments/enablefpe/: enablefpe.cpp
experiments/standardicons/: CMakeLists.txt
experiments/standardicons/src/: standardicons.cpp
src/: Calibration.cpp  Calibration.hpp  CentralWidget.cpp  CentralWidget.hpp  Compressor.cpp  Compressor.hpp  ConnectSignals.cpp  CrashDialog.cpp  CrashDialog.hpp  CrashHandler.cpp  CrashHandler.hpp  CrashTester.cpp  CrashTester.hpp  Debug.cpp  Debug.hpp  Delay.cpp  Delay.hpp  DeltaDial.cpp  DeltaDial.hpp  Emojis.cpp  Emojis.hpp  Event.hpp  Events.hpp  FilterWeight.cpp  FilterWeight.hpp  Instance.cpp  Instance.hpp  LoadCell.cpp  LoadCell.hpp  Logic.cpp  Logic.hpp  Logs.cpp  Logs.hpp  LogsSmallWidget.cpp  LogsSmallWidget.hpp  LogsWidget.cpp  LogsWidget.hpp  Mail.cpp  Mail.hpp  Main.cpp  (+37 more)
src/scripts/: .watcher.sh  install-libhx711.sh  install-libpinctrl.sh  libhx711.patch  libhx711_no_busy_wait.patch  raspberry-utils.patch  watcher.sh
