cmake_minimum_required(VERSION 3.25)
project(standardicons)
FILE(GLOB_RECURSE sources CONFIGURE_DEPENDS src/*.cpp)
# FILE(GLOB_RECURSE resources CONFIGURE_DEPENDS data/*.qrc)
set(CMAKE_CXX_FLAGS "-std=c++23")
set(CMAKE_LINKER_TYPE "LLD")
# set(CMAKE_AUTOMOC ON)
# set(CMAKE_AUTORCC ON)
# set(CMAKE_AUTOUIC ON)
add_executable(${PROJECT_NAME} ${sources} ${resources})
set(QTLIBLIST Widgets Core Gui)
find_package(Qt6 REQUIRED ${QTLIBLIST})
foreach(qtlib ${QTLIBLIST})
  target_link_libraries(${PROJECT_NAME} Qt6::${qtlib})
endforeach()
